--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-imagemin": "^2.4.0"
+  },
+  "dependencies": {
+    "imagemin-pngquant": "^4.2.0"
   }
 }
